@@ -1,3 +1,3 @@
-EBUILD enlightenment-9999.ebuild 762 RMD160 d75fa0d7627394064308b08f1779566cdd9bcd4b SHA1 0197ab31ce79c7ee692e42cc78e627b8c8bb4e76 SHA256 ebacb56380b6f38b7ad34053ec18bf5ef3c5738d000524d0777e073e06676d0b
-MISC ChangeLog 637 RMD160 c3ccfe0eb28af41607d602175c501d7d5e8f710e SHA1 59bbcc063366a70754377002627e3b43bfa16cec SHA256 c300a2e117afa7a861a0df239dcd1445d316bf5f3a85a9d758f74bd3cb6667eb
+EBUILD enlightenment-9999.ebuild 663 RMD160 8665ab96dfba05796f7a2555dece663b02c3b6f9 SHA1 4059329e7ecde86a1dd2a3f9abb83c103aeceb76 SHA256 187ef2c30e36d27708d38490b67cdc8c09e1f8b065b0f19aeed559cce4c25f4e
+MISC ChangeLog 771 RMD160 d5f8416bf66ad9ecd1085901c7669ca8b18d3912 SHA1 83bf7a6c7a9e0a718a4ec65ead996e6653296cef SHA256 7a1c6ac333e617cbb166d4145b434cf580e96daafe9fee46fe14b548d09da29b
 MISC metadata.xml 372 RMD160 4fd59272d832af726a9beb2966bcafe317c7b976 SHA1 eebeb115de7ea95da5ccaeb29f438f92f09434d4 SHA256 6ff74234215c5e69a2652701f65c94720978c46e22389a881bf3a48f7256bed9
