@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI="2"
+
 ESVN_URI_APPEND="e"
 inherit enlightenment
 
@@ -11,25 +13,21 @@ SLOT="0.17"
 IUSE="pam exchange"
 
 RDEPEND=">=x11-libs/ecore-9999
-	>=media-libs/edje-9999
-	>=dev-libs/eet-9999
-	>=dev-libs/efreet-9999
-	>=dev-libs/embryo-9999
-	>=dev-libs/eina-9999
-	>=x11-libs/evas-9999
-	pam? ( sys-libs/pam )
-	>=x11-libs/e_dbus-9999
-	exchange? ( >=app-misc/exchange-9999 )"
+		>=media-libs/edje-9999
+		>=dev-libs/eet-9999
+		>=dev-libs/efreet-9999
+		>=dev-libs/embryo-9999
+		>=dev-libs/eina-9999
+		>=x11-libs/evas-9999[png]
+		pam? ( sys-libs/pam )
+		>=x11-libs/e_dbus-9999
+		exchange? ( >=app-misc/exchange-9999 )"
 
 DEPEND="${RDEPEND}
-	x11-proto/xproto
-	sys-devel/libtool"
+		x11-proto/xproto
+		sys-devel/libtool"
 
 pkg_setup() {
-	if ! built_with_use x11-libs/evas png ; then
-		eerror "Re-emerge evas with USE=png"
-		die "Re-emerge evas with USE=png"
-	fi
 	enlightenment_pkg_setup
 }
 
